--- a/src/styles/Work.css
+++ b/src/styles/Work.css
@@ -163,6 +163,10 @@
     margin-left: 0;
     padding-right: 0;
   }
+  .work-flex::before,
+  .work-flex::after {
+    width: 100%;
+  }
   .work-flex .work-box,
   .work-flex .work-box:nth-child(2n) {
     flex-direction: column;
